--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /nbproject/private/
+.idea/php.xml
+.idea/phpunit.xml
+.idea/supedsis.iml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/supedsis.iml
