--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/legacy-factories": "^1.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "spatie/laravel-permission": "^3.18"
+        "laravelcollective/html": "^6.2",
+        "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
